@@ -12,6 +12,7 @@ Released: xx/xx/2008
     - Ada (Procedure Definitions)
     - Configuration Files (ini) (sections, keys)
     - Dos Batch Scripts (Labels)
+    - Editra Style Sheets (Style Tags Definitions)
     - Fortran (Programs, Subroutines, Functions)
     - Lisp (Function Definitions)
     - Lua (Function Definitions)
